# creatur-wains

./: .ghci  .gitignore  Benchmark.hs  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  cabal.project  creatur-wains.cabal  default.nix  notes  package.yaml  project.nix  release.nix  shell.nix  stack.yaml
appLearningTest/: Main.hs
appLearningTest2/: Main.hs
appTeachingTest/: Main.hs
src/ALife/Creatur/: Wain.hs  Wain.hs~  WainInternal.hs
src/ALife/Creatur/Wain/: AgentCSV.hs  Brain.hs  Brain.hs~  BrainInternal.hs  Checkpoint.hs  ClassificationMetrics.hs  Classifier.hs  Classifier.hs~  ClassifierInternal.hs  Condition.hs  Condition.hs~  Daemon.hs  Decider.hs  Decider.hs~  ExamineAgent.hs  GeneratePopulation.hs  GeneticSOM.hs  GeneticSOM.hs~  GeneticSOMInternal.hs  LearningParams.hs  LearningParamsInternal.hs  Maths.hs~  Muser.hs  MuserInternal.hs  Pattern.hs  PatternAdjuster.hs  PersistentStatistics.hs  PlusMinusOne.hs  Predictor.hs  PredictorInternal.hs  Pretty.hs  Pretty.hs~  Probability.hs  ProbabilityInternal.hs  Random.hs  Random.hs~  Ratchet.hs  Raw.hs  Report.hs  Response.hs  (+18 more)
src/ALife/Creatur/Wain/Util/: AssessmentDiagram.hs  AssessmentDiagram.hs~  BatchAverage.hs  BatchAverage.hs~  Chart.hs  Condense.hs  Condense.hs~  DeciderDiagram.hs  Diagram.hs  Diagram.hs~  Plot.hs  Plot.hs~  PredictorDiagram.hs
test/: Benchmark.hs  LearningTest.hs  Main.hs  Main.hs~  Spec.hs  TeachingTest.hs
test-library/ALife/Creatur/: WainQC.hs
test-library/ALife/Creatur/Wain/: BrainQC.hs  ClassifierQC.hs  GeneticSOMQC.hs  LearningParamsQC.hs  PatternAdjusterQC.hs  PatternQC.hs  PredictorQC.hs  ProbabilityQC.hs  ResponseAdjusterQC.hs  ResponseQC.hs  SimpleMuserQC.hs  SimpleResponseTweakerQC.hs  TestUtils.hs  WeightsQC.hs
test/ALife/Creatur/: WainQC.hs  WainQC.hs~
test/ALife/Creatur/Wain/: BrainQC.hs  BrainQC.hs~  ClassificationMetricsQC.hs  ClassifierQC.hs  ClassifierQC.hs~  ConditionQC.hs  ConditionQC.hs~  DeciderQC.hs  DeciderQC.hs~  GeneticSOMQC.hs  GeneticSOMQC.hs~  MuserQC.hs  PlusMinusOneQC.hs  PredictorQC.hs  ProbabilityQC.hs  ResponseQC.hs  ResponseQC.hs~  ScenarioQC.hs  ScenarioQC.hs~  SimpleMuserQC.hs  SimpleResponseTweakerQC.hs  StatisticianQC.hs  TestUtils.hs  TestUtils.hs~  UnitIntervalQC.hs  UnitIntervalQC.hs~  UnitVectorQC.hs~  UtilQC.hs  UtilQC.hs~  WeightsQC.hs
