name:           creatur-wains
version:        9.7
synopsis:       Artificial agent specialised for for pattern discovery.
description:    Please see the README on GitHub at <https://github.com/mhwombat/creatur-wains#readme>
category:       AI
homepage:       https://github.com/mhwombat/creatur-wains#readme
bug-reports:    https://github.com/mhwombat/creatur-wains/issues
author:         Amy de Buitléir
maintainer:     amy@nualeargais.ie
copyright:      2013-2019 Amy de Buitléir
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/mhwombat/creatur-wains

library
  exposed-modules:
      ALife.Creatur.Wain
      ALife.Creatur.Wain.AgentCSV
      ALife.Creatur.Wain.Brain
      ALife.Creatur.Wain.BrainInternal
      ALife.Creatur.Wain.Checkpoint
      ALife.Creatur.Wain.Classifier
      ALife.Creatur.Wain.ClassifierInternal
      ALife.Creatur.Wain.ExamineAgent
      ALife.Creatur.Wain.GeneticSOM
      ALife.Creatur.Wain.GeneticSOMInternal
      ALife.Creatur.Wain.Muser
      ALife.Creatur.Wain.PersistentStatistics
      ALife.Creatur.Wain.PlusMinusOne
      ALife.Creatur.Wain.Predictor
      ALife.Creatur.Wain.PredictorInternal
      ALife.Creatur.Wain.Pretty
      ALife.Creatur.Wain.Probability
      ALife.Creatur.Wain.ProbabilityInternal
      ALife.Creatur.Wain.Raw
      ALife.Creatur.Wain.Response
      ALife.Creatur.Wain.ResponseInternal
      ALife.Creatur.Wain.SimpleMuser
      ALife.Creatur.Wain.SimpleMuserInternal
      ALife.Creatur.Wain.SimpleResponseTweaker
      ALife.Creatur.Wain.Statistics
      ALife.Creatur.Wain.UnitInterval
      ALife.Creatur.Wain.Util
      ALife.Creatur.Wain.Weights
      ALife.Creatur.Wain.WeightsInternal
      ALife.Creatur.WainInternal
  other-modules:
      Paths_creatur_wains
  hs-source-dirs:
      src
  ghc-options: -Wall -Werror
  build-depends:
      MonadRandom >= 0.5.1 && < 0.6
    , base >=4.7 && <5
    , bytestring >= 0.10.8 && < 0.11
    , cereal >= 0.5.7 && < 0.6
    , containers >= 0.5.7 && < 0.7
    , creatur >= 5.9.27 && < 5.10
    , deepseq >= 1.4.3 && < 1.5
    , directory >= 1.3.1 && < 1.4
    , filepath >= 1.4.2 && < 1.5
    , lens >= 4.19 && < 4.20
    , mtl >= 2.2.2 && < 2.3
    , random >= 1.1 && < 1.2
    , som >= 10.1.11 && < 10.2
    , unix >= 2.7.2 && < 2.8
  default-language: Haskell2010

test-suite creatur-wains-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ALife.Creatur.Wain.BrainQC
      ALife.Creatur.Wain.ClassifierQC
      ALife.Creatur.Wain.GeneticSOMQC
      ALife.Creatur.Wain.PlusMinusOneQC
      ALife.Creatur.Wain.PredictorQC
      ALife.Creatur.Wain.ProbabilityQC
      ALife.Creatur.Wain.ResponseQC
      ALife.Creatur.Wain.SimpleMuserQC
      ALife.Creatur.Wain.SimpleResponseTweakerQC
      ALife.Creatur.Wain.TestUtils
      ALife.Creatur.Wain.UnitIntervalQC
      ALife.Creatur.Wain.UtilQC
      ALife.Creatur.Wain.WeightsQC
      ALife.Creatur.WainQC
      Paths_creatur_wains
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      MonadRandom
    , QuickCheck
    , base >=4.7 && <5
    , cereal
    , containers
    , creatur
    , creatur-wains
    , deepseq
    , lens
    , mtl
    , numeric-tools
    , random
    , som
    , test-framework
    , test-framework-quickcheck2
  default-language: Haskell2010

executable creatur-wains-learning-test
  main-is: Main.hs
  hs-source-dirs:
    appLearningTest, test
  other-modules:
    ALife.Creatur.Wain.ClassifierQC
    ALife.Creatur.Wain.GeneticSOMQC
    ALife.Creatur.Wain.PlusMinusOneQC
    ALife.Creatur.Wain.ResponseQC
    ALife.Creatur.Wain.SimpleResponseTweakerQC
    ALife.Creatur.Wain.TestUtils
    ALife.Creatur.Wain.UnitIntervalQC
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      MonadRandom
    , QuickCheck
    , base >=4.7 && <5
    , cereal
    , containers
    , creatur
    , creatur-wains
    , deepseq
    , lens
    , mtl
    , random
    , som
    , test-framework
    , test-framework-quickcheck2
  default-language: Haskell2010

executable creatur-wains-learning-test2
  main-is: Main.hs
  hs-source-dirs:
    appLearningTest2, test
  other-modules:
    ALife.Creatur.Wain.ClassifierQC
    ALife.Creatur.Wain.GeneticSOMQC
    ALife.Creatur.Wain.PlusMinusOneQC
    ALife.Creatur.Wain.ResponseQC
    ALife.Creatur.Wain.SimpleResponseTweakerQC
    ALife.Creatur.Wain.TestUtils
    ALife.Creatur.Wain.UnitIntervalQC
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      MonadRandom
    , QuickCheck
    , base >=4.7 && <5
    , cereal
    , containers
    , creatur
    , creatur-wains
    , deepseq
    , lens
    , mtl
    , random
    , som
    , test-framework
    , test-framework-quickcheck2
  default-language: Haskell2010

executable creatur-wains-teaching-test
  main-is: Main.hs
  hs-source-dirs:
    appTeachingTest, test
  other-modules:
    ALife.Creatur.Wain.ClassifierQC
    ALife.Creatur.Wain.GeneticSOMQC
    ALife.Creatur.Wain.PlusMinusOneQC
    ALife.Creatur.Wain.ResponseQC
    ALife.Creatur.Wain.SimpleResponseTweakerQC
    ALife.Creatur.Wain.TestUtils
    ALife.Creatur.Wain.UnitIntervalQC
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      MonadRandom
    , QuickCheck
    , base >=4.7 && <5
    , cereal
    , containers
    , creatur
    , creatur-wains
    , deepseq
    , lens
    , mtl
    , random
    , som
    , test-framework
    , test-framework-quickcheck2
  default-language: Haskell2010
                 
