cabal-version:      2.4
name:               creatur-wains
version:            9.7
synopsis:           Artificial agent specialised for for pattern discovery.
homepage:           https://github.com/mhwombat/creatur-wains#readme
bug-reports:        https://github.com/mhwombat/creatur-wains/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2013-2021 Amy de Buitléir
category:           AI
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    ALife.Creatur.Wain
    ALife.Creatur.Wain.AgentCSV
    ALife.Creatur.Wain.Brain
    ALife.Creatur.Wain.BrainInternal
    ALife.Creatur.Wain.Checkpoint
    ALife.Creatur.Wain.Classifier
    ALife.Creatur.Wain.ClassifierInternal
    ALife.Creatur.Wain.ExamineAgent
    ALife.Creatur.Wain.GeneticSOM
    ALife.Creatur.Wain.GeneticSOMInternal
    ALife.Creatur.Wain.Muser
    ALife.Creatur.Wain.PersistentStatistics
    ALife.Creatur.Wain.PlusMinusOne
    ALife.Creatur.Wain.Predictor
    ALife.Creatur.Wain.PredictorInternal
    ALife.Creatur.Wain.Pretty
    ALife.Creatur.Wain.Probability
    ALife.Creatur.Wain.ProbabilityInternal
    ALife.Creatur.Wain.Raw
    ALife.Creatur.Wain.Response
    ALife.Creatur.Wain.ResponseInternal
    ALife.Creatur.Wain.SimpleMuser
    ALife.Creatur.Wain.SimpleMuserInternal
    ALife.Creatur.Wain.SimpleResponseTweaker
    ALife.Creatur.Wain.Statistics
    ALife.Creatur.Wain.UnitInterval
    ALife.Creatur.Wain.Util
    ALife.Creatur.Wain.Weights
    ALife.Creatur.Wain.WeightsInternal
    ALife.Creatur.WainInternal

  other-modules:    Paths_creatur_wains
  ghc-options:      -Wall -Wunused-packages
  build-depends:
    , base         >=4.7     && <5
    , bytestring   ^>=0.10.8
    , cereal       ^>=0.5.7
    , containers   >=0.5.7   && <0.7
    , creatur      ^>=5.9.27
    , deepseq      ^>=1.4.3
    , directory    ^>=1.3.1
    , filepath     ^>=1.4.2
    , lens         ^>=4.19
    , MonadRandom  ^>=0.5.1
    , mtl          ^>=2.2.2
    , random       ^>=1.1
    , som          ^>=10.1.11
    , unix         ^>=2.7.2

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite creatur-wains-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    ALife.Creatur.Wain.BrainQC
    ALife.Creatur.Wain.ClassifierQC
    ALife.Creatur.Wain.GeneticSOMQC
    ALife.Creatur.Wain.PlusMinusOneQC
    ALife.Creatur.Wain.PredictorQC
    ALife.Creatur.Wain.ProbabilityQC
    ALife.Creatur.Wain.ResponseQC
    ALife.Creatur.Wain.SimpleMuserQC
    ALife.Creatur.Wain.SimpleResponseTweakerQC
    ALife.Creatur.Wain.TestUtils
    ALife.Creatur.Wain.UnitIntervalQC
    ALife.Creatur.Wain.UtilQC
    ALife.Creatur.Wain.WeightsQC
    ALife.Creatur.WainQC
    Paths_creatur_wains

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages

  build-depends:
    , base
    , cereal
    , containers
    , creatur
    , creatur-wains
    , deepseq
    , lens
    , MonadRandom
    , mtl
    , numeric-tools
    , QuickCheck
    , random
    , som
    , test-framework
    , test-framework-quickcheck2

executable creatur-wains-learning-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test appLearningTest
  main-is:          Main.hs
  other-modules:
    ALife.Creatur.Wain.ClassifierQC
    ALife.Creatur.Wain.GeneticSOMQC
    ALife.Creatur.Wain.PlusMinusOneQC
    ALife.Creatur.Wain.ResponseQC
    ALife.Creatur.Wain.SimpleResponseTweakerQC
    ALife.Creatur.Wain.TestUtils
    ALife.Creatur.Wain.UnitIntervalQC

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages

  build-depends:
    , base
    , cereal
    , containers
    , creatur
    , creatur-wains
    , deepseq
    , lens
    , MonadRandom
    , mtl
    , QuickCheck
    , random
    , som
    , test-framework
    , test-framework-quickcheck2

executable creatur-wains-learning-test2
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test appLearningTest2
  main-is:          Main.hs
  other-modules:
    ALife.Creatur.Wain.ClassifierQC
    ALife.Creatur.Wain.GeneticSOMQC
    ALife.Creatur.Wain.PlusMinusOneQC
    ALife.Creatur.Wain.ResponseQC
    ALife.Creatur.Wain.SimpleResponseTweakerQC
    ALife.Creatur.Wain.TestUtils
    ALife.Creatur.Wain.UnitIntervalQC

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages

  build-depends:
    , base
    , cereal
    , containers
    , creatur
    , creatur-wains
    , deepseq
    , lens
    , MonadRandom
    , mtl
    , QuickCheck
    , random
    , som
    , test-framework
    , test-framework-quickcheck2

executable creatur-wains-teaching-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test appTeachingTest
  main-is:          Main.hs
  other-modules:
    ALife.Creatur.Wain.ClassifierQC
    ALife.Creatur.Wain.GeneticSOMQC
    ALife.Creatur.Wain.PlusMinusOneQC
    ALife.Creatur.Wain.ResponseQC
    ALife.Creatur.Wain.SimpleResponseTweakerQC
    ALife.Creatur.Wain.TestUtils
    ALife.Creatur.Wain.UnitIntervalQC

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages

  build-depends:
    , base
    , cereal
    , containers
    , creatur
    , creatur-wains
    , deepseq
    , lens
    , MonadRandom
    , mtl
    , QuickCheck
    , random
    , som
    , test-framework
    , test-framework-quickcheck2
