cabal-version:      2.4
name:               creatur-wains
version:            9.7
synopsis:           Artificial agent specialised for for pattern discovery.
description:
  Please see the README on GitHub at <https://github.com/mhwombat/creatur-wains#readme>
homepage:           https://github.com/mhwombat/creatur-wains#readme
bug-reports:        https://github.com/mhwombat/creatur-wains/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2013-2021 Amy de Buitléir
category:           AI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/creatur-wains

common common-stuff
  default-language: Haskell2010
  build-depends:
    , base         >=4.7   && <5
    , lens         ^>=5.0.1
    , MonadRandom  ^>=0.5.1
    , random       >=1.1   && <1.3

common common-stuff2
  build-depends:
    , cereal      ^>=0.5.7
    , containers  >=0.5.7   && <0.7
    , creatur     ^>=5.9.30
    , mtl         ^>=2.2.2
    , som         ^>=10.1.11

common test-stuff
  build-depends:
    , deepseq                     ^>=1.4.3
    , QuickCheck                  ^>=2.14.2
    , test-framework-quickcheck2  ^>=0.3.0

common exe-stuff
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
  build-depends: test-library

library
  import:           common-stuff, common-stuff2
  hs-source-dirs:   src
  exposed-modules:
    ALife.Creatur.Wain
    ALife.Creatur.Wain.AgentCSV
    ALife.Creatur.Wain.Brain
    ALife.Creatur.Wain.BrainInternal
    ALife.Creatur.Wain.Checkpoint
    ALife.Creatur.Wain.Classifier
    ALife.Creatur.Wain.ClassifierInternal
    ALife.Creatur.Wain.ExamineAgent
    ALife.Creatur.Wain.GeneticSOM
    ALife.Creatur.Wain.GeneticSOMInternal
    ALife.Creatur.Wain.Muser
    ALife.Creatur.Wain.PersistentStatistics
    ALife.Creatur.Wain.PlusMinusOne
    ALife.Creatur.Wain.Predictor
    ALife.Creatur.Wain.PredictorInternal
    ALife.Creatur.Wain.Pretty
    ALife.Creatur.Wain.Probability
    ALife.Creatur.Wain.ProbabilityInternal
    ALife.Creatur.Wain.Raw
    ALife.Creatur.Wain.Response
    ALife.Creatur.Wain.ResponseInternal
    ALife.Creatur.Wain.SimpleMuser
    ALife.Creatur.Wain.SimpleMuserInternal
    ALife.Creatur.Wain.SimpleResponseTweaker
    ALife.Creatur.Wain.Statistics
    ALife.Creatur.Wain.UnitInterval
    ALife.Creatur.Wain.Util
    ALife.Creatur.Wain.Weights
    ALife.Creatur.Wain.WeightsInternal
    ALife.Creatur.WainInternal
  other-modules:    Paths_creatur_wains
  autogen-modules:  Paths_creatur_wains
  ghc-options:      -Wall -Wunused-packages
  default-language: Haskell2010
  build-depends:
    , bytestring  >=0.10.8 && <0.12
    , deepseq     ^>=1.4.3
    , directory   ^>=1.3.1
    , filepath    ^>=1.4.2
    , unix        ^>=2.7.2

library test-library
  import:          common-stuff, common-stuff2, test-stuff
  hs-source-dirs:  test-library
  exposed-modules:
    ALife.Creatur.Wain.BrainQC
    ALife.Creatur.Wain.ClassifierQC
    ALife.Creatur.Wain.GeneticSOMQC
    ALife.Creatur.Wain.PlusMinusOneQC
    ALife.Creatur.Wain.PredictorQC
    ALife.Creatur.Wain.ProbabilityQC
    ALife.Creatur.Wain.ResponseQC
    ALife.Creatur.Wain.SimpleMuserQC
    ALife.Creatur.Wain.SimpleResponseTweakerQC
    ALife.Creatur.Wain.TestUtils
    ALife.Creatur.Wain.UnitIntervalQC
    ALife.Creatur.Wain.UtilQC
    ALife.Creatur.Wain.WeightsQC
    ALife.Creatur.WainQC
  build-depends:
    , creatur-wains
    , numeric-tools   ^>=0.2.0
    , test-framework  ^>=0.8.2

test-suite creatur-wains-test
  import:           exe-stuff
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Paths_creatur_wains
  build-depends:
    , base
    , test-framework  ^>=0.8.2

executable creatur-wains-learning-test
  import:         common-stuff, exe-stuff
  hs-source-dirs: appLearningTest
  main-is:        Main.hs
  build-depends:  creatur-wains

executable creatur-wains-learning-test2
  import:         common-stuff, exe-stuff
  hs-source-dirs: appLearningTest2
  main-is:        Main.hs
  build-depends:  creatur-wains

executable creatur-wains-teaching-test
  import:         common-stuff, exe-stuff
  hs-source-dirs: appTeachingTest
  main-is:        Main.hs
  build-depends:  creatur-wains
